build(modules): opens main packages for JUnit runtime reflection
- 29 module-info: `opens <own package>` so JUnit can reflectively
  instantiate same-package test classes under JPMS; runtime-only,
  compile-time visibility unchanged
- docs/design/02: sync §4 core.session snippet; replace stale surefire
  --add-opens fragment; §7.3 rule updated ("no module needs opens" →
  opens limited to test-framework runtime reflection)